docs/api/qiskit/0.39/qiskit.transpiler.passes.Depth.mdx
---
title: Depth (v0.39)
description: API reference for qiskit.transpiler.passes.Depth in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Depth
---

# Depth

<Class id="qiskit.transpiler.passes.Depth" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/analysis/depth.py" signature="Depth(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.basepasses.AnalysisPass`](qiskit.transpiler.AnalysisPass "qiskit.transpiler.basepasses.AnalysisPass")

  Calculate the depth of a DAG circuit.

  **Parameters**

  **recurse** – whether to allow recursion into control flow. If this is `False` (default), the pass will throw an error when control flow is present, to avoid returning a number with little meaning.

  ## Methods

  <span id="qiskit-transpiler-passes-depth-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Depth.name" signature="Depth.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-depth-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Depth.run" signature="Depth.run(dag)">
    Run the Depth pass on dag.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Depth.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Depth.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

